# slam_in_autonomous_driving

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  vcpkg.json
config/: mapping.yaml
scripts/: all_path.py
src/: CMakeLists.txt
src/ch10/: CMakeLists.txt  fusion.cc  fusion.h  run_fusion_offline.cc
src/ch2/: CMakeLists.txt  motion.cc
src/ch2_practice/: CMakeLists.txt  motion.cc  readme.md
src/ch3/: CMakeLists.txt  eskf.hpp  process_gnss.cc  run_eskf_gins.cc  run_imu_integration.cc
src/ch3_practice/: CMakeLists.txt  process_gnss.cc  static_imu_init.cc  utm_convert.cc
src/ch4/: CMakeLists.txt  g2o_types.cc  g2o_types.h  gins_pre_integ.cc  gins_pre_integ.h  imu_preintegration.cc  imu_preintegration.h  run_gins_pre_integ.cc  test_preintegration.cc
src/ch5/: CMakeLists.txt  gridnn.hpp  kdtree.cc  kdtree.h  linear_fitting.cc  octo_tree.cc  octo_tree.h  pcd_to_bird_eye.cc  point_cloud_load_and_vis.cc  scan_to_range_image.cc  test_nn.cc
src/ch6/: CMakeLists.txt  frame.cc  g2o_types.h  icp_2d.cc  icp_2d.h  lidar_2d_utils.cc  likelihood_field.cc  likelihood_filed.h  loop_closing.cc  mapping_2d.cc  multi_resolution_likelihood_field.cc  occupancy_map.cc  submap.cc  test_2d_icp_likelihood.cc  test_2d_icp_s2s.cc  test_2d_mapping.cc  test_2dlidar_io.cc  test_mr_matching.cc  test_occupancy_grid.cc
src/ch7/: CMakeLists.txt  direct_ndt_lo.cc  direct_ndt_lo.h  gen_simu_data.cc  icp_3d.cc  icp_3d.h  icp_inc.cpp  icp_inc.hpp  incremental_ndt_lo.cc  ndt_3d.cc  ndt_3d.h  ndt_inc.cc
src/ch7/ikd_tree/: ikd_tree.cpp  ikd_tree.hpp
src/ch7/loam-like/: feature_extraction.cc  loam_like_odom.cc
src/ch7/loosely_coupled_lio/: cloud_convert.cc  cloud_convert.h  loosely_lio.cc  loosely_lio.h  measure_sync.cc  measure_sync.h
src/ch7/test/: run_gen_simu_data.cc  test_feature_extraction.cc  test_icp.cc  test_inc_ndt_lo.cc  test_loam_odom.cc  test_loosely_lio.cc  test_ndt_lo.cc
src/ch8/: CMakeLists.txt
src/ch8/lio-iekf/: iekf.hpp  lio_iekf.cc  lio_iekf.h
src/ch8/lio-preinteg/: lio_preinteg.cc  lio_preinteg.h
src/ch8/test/: test_lio_iekf.cc  test_lio_preinteg.cc
src/ch9/: CMakeLists.txt  dump_map.cc  frontend.cc  keyframe.cc  loopclosure.cc  loopclosure.h  optimization.cc  run_frontend.cc  run_loopclosure.cc  run_mapping.cc  run_optimization.cc  split_map.cc
src/common/: CMakeLists.txt  eigen_types.h  g2o_types.cc  g2o_types.h  global_flags.cc  io_utils.cc  io_utils.h  math_utils.h  nav_state.h  point_cloud_utils.cc  point_cloud_utils.h  sys_utils.h
src/common/include/: so3_jacobi.hpp
src/common/msg/monitor_msgs/: CMakeLists.txt  package.xml
src/common/msg/monitor_msgs/msg/: fault_info.msg  fault_vec.msg
src/common/msg/velodyne_msgs/: CMakeLists.txt
src/common/msg/velodyne_msgs/msg/: VelodyneScan.msg
src/common/timer/: timer.cc  timer.h
src/tools/: CMakeLists.txt  pcl_map_viewer.h
src/tools/pointcloud_convert/: packets_parser.cc  velodyne_convertor.cc
src/tools/ui/: pangolin_window.cc  pangolin_window_impl.cc  pangolin_window_impl.h  ui_car.cc  ui_cloud.cc  ui_test.cc  ui_trajectory.cc  ui_trajectory.h
